データを追加していくテーブル

--- a/htdocs/css/style.css
+++ b/htdocs/css/style.css
@@ -1,3 +1,18 @@
-.title {
+#app {
     text-align: center;
+}
+
+.add-button {
+    width: 200px;
+    height: 100px;
+}
+
+.table-wrap {
+    margin-top: 20px;
+    height: 150px;
+    overflow-y: auto;
+}
+
+.data-table {
+    margin: auto;
 }
