--- a/htdocs/css/style.css
+++ b/htdocs/css/style.css
@@ -1,3 +1,14 @@
+html {
+    touch-action: none;
+}
+
+body {
+    position: fixed;
+    width: 100%;
+    top: 0;
+    left: 0;
+}
+
 #app {
     text-align: center;
 }
